Check finished handlers when making a connection

When a connection is made, we remove the node from the list of tail
processing nodes.  But we didn't remove the node from the list of
finished handlers.  This is needed too because if we don't, when the
finished handlers are processed, they'll disable their outputs
incorrectly.

Bug: 849189
Test: 
Change-Id: I11a5467d8ed42d9819b19a63c27e7838225f39e1
Reviewed-on: https://chromium-review.googlesource.com/1087725
Reviewed-by: Hongchan Choi <hongchan@chromium.org>
Commit-Queue: Raymond Toy <rtoy@chromium.org>
Cr-Commit-Position: refs/heads/master@{#565013}
Former-commit-id: 279360c05dc73d985beb135d221db376579e6128